# linux-uuid-for-c

./: .gitignore  CMakeLists.txt  README.md  uuidConfig.cmake.in
.github/workflows/: c.yml  ci.yaml  ci.yml  win.yaml
include/: uuid.h
scripts/: build_choco.ps1  build_deb.sh  build_rpm.sh  submit_choco_package.ps1  submit_homebrew_formula.sh  submit_rpm_to_copr.sh  upload_to_ppa.sh  uuid.rb
src/: winid.c  winid.h
src/id/: is_unique.c  log.c  tbl_hash.c  uuid.c
